<resources>
    <string name="app_name">Icy Note</string>

    <string name="noteDisplayTitleHint">enter title…</string>
    <string name="noteDisplayTextHint">enter text…</string>

    <string name="listAllNotes">List all Notes</string>
    <string name="openLastNote">Reopen last note</string>
    <string name="editTags">Edit tags</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>

    <string name="menuButtonImage">Menu button image</string>
    <string name="menuOpenMetadata">Metadata button image</string>
    <string name="menuRefresh">Refresh button image</string>
    <string name="menuBack">Back button image</string>

    <string name="label_email_password">Email/Password</string>

...
