...
            android:layout_weight="1"
            android:visibility="gone"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lvNotes"
                android:layout_weight="1" />

        <!-- </RelativeLayout> -->

        <RelativeLayout
            android:orientation="horizontal"
...
            android:layout_height="wrap_content">

            <Button
                android:text="@string/notes_list_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btAdd"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:layout_toEndOf="@+id/tvNumNotes"
...
                />

            <Button
                android:text="@string/notes_list_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btDelete"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/tvNumNotes"
                android:layout_toStartOf="@+id/tvNumNotes"
...
