...
        android:layout_marginBottom="36dp" />

    <Button
        android:text="@string/activity_chooser_google_sign_in"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:id="@+id/google_sign_in_button"
        android:onClick="googleSignIn"
        android:layout_below="@+id/local_sign_in_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

